# cara-audio

./: .env.template  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
notebooks/: validation_loop.ipynb  validation_loop_VAD.ipynb
src/cara/: __init__.py  config.py  main.py
src/cara/api/: __init__.py
src/cara/api/middleware/: auth.py
src/cara/api/routes/: __init__.py  health.py  jobs.py  stt.py  tts.py  voices.py
src/cara/engines/: __init__.py  chatterbox_engine.py  longform.py  streaming.py  transcription.py
src/cara/engines/providers/: __init__.py  chatterbox_tts.py  factory.py  stt_base.py  tts_base.py  whisper_stt.py
src/cara/models/: __init__.py  manager.py
src/cara/utils/: __init__.py  audio.py  text.py
tests/: conftest.py  test_stt.py  test_tts.py
